Project information, Responsivnes.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
 
   <section class="home" id="1">
     <p class="page-background-num">01</p>
-    <nav>
-      <div class="logo">AJ</div>
+
+    <div class="menu-button">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+    <div class="logo">AJ</div>
+
+    <nav id="navigation">
       <ul>
         <li><a href="#1"><span>01</span>Home</a></li>
         <li><a href="#2"><span>02</span>About</a></li>
@@ -32,22 +39,30 @@
     </div>
 
     <div class="icons-home">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-        <path
-          d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z" />
-      </svg>
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-        <path
-          d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-      </svg>
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-        <path
-          d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm0 7.082c1.602 0 1.792.006 2.425.035 1.627.074 2.385.845 2.46 2.459.028.633.034.822.034 2.424s-.006 1.792-.034 2.424c-.075 1.613-.832 2.386-2.46 2.46-.633.028-.822.035-2.425.035-1.602 0-1.792-.006-2.424-.035-1.63-.075-2.385-.849-2.46-2.46-.028-.632-.035-.822-.035-2.424s.007-1.792.035-2.424c.074-1.615.832-2.386 2.46-2.46.632-.029.822-.034 2.424-.034zm0-1.082c-1.63 0-1.833.007-2.474.037-2.18.1-3.39 1.309-3.49 3.489-.029.641-.036.845-.036 2.474 0 1.63.007 1.834.036 2.474.1 2.179 1.31 3.39 3.49 3.49.641.029.844.036 2.474.036 1.63 0 1.834-.007 2.475-.036 2.176-.1 3.391-1.309 3.489-3.49.029-.64.036-.844.036-2.474 0-1.629-.007-1.833-.036-2.474-.098-2.177-1.309-3.39-3.489-3.489-.641-.03-.845-.037-2.475-.037zm0 2.919c-1.701 0-3.081 1.379-3.081 3.081s1.38 3.081 3.081 3.081 3.081-1.379 3.081-3.081c0-1.701-1.38-3.081-3.081-3.081zm0 5.081c-1.105 0-2-.895-2-2 0-1.104.895-2 2-2 1.104 0 2.001.895 2.001 2s-.897 2-2.001 2zm3.202-5.922c-.397 0-.72.322-.72.72 0 .397.322.72.72.72.398 0 .721-.322.721-.72 0-.398-.322-.72-.721-.72z" />
-      </svg>
+      <a href="https://github.com/Aleksandar-Jocovic" target="_blank" rel="noopener noreferrer">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <path
+            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+        </svg>
+      </a>
+      <a href="https://www.linkedin.com/in/aleksandar-jo%C4%8Dovi%C4%87-a402141a8/" target="_blank"
+        rel="noopener noreferrer">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <path
+            d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z" />
+        </svg>
+      </a>
+      <a href="https://github.com/Aleksandar-Jocovic" target="_blank" rel="noopener noreferrer">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <path
+            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+        </svg>
+      </a>
+
     </div>
 
     <div class="page-navigation">
-      <button class="up">
+      <button>
         <svg height="24" width="24">
           <polyline points="1,12 11,1 22,12 " />
         </svg>
@@ -59,9 +74,8 @@
         <line x1="11" y1="1" x2="11" y2="99" />
       </svg>
 
-      <div class="page-num num-second">02
-      </div>
-      <button class="down">
+      <div class="page-num num-second">02</div>
+      <button>
         <svg height="24" width="24">
           <polyline points="1,1 11,11 22,1 " />
         </svg>
@@ -76,12 +90,17 @@
     <h2 class="section-header">About me</h2>
     <div class="section-content">
       <div class="about-text-and-tech">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam maiores quia, reiciendis iusto facilis
-          nisi perferendis optio delectus vitae earum necessitatibus corporis animi sit. Excepturi natus
-          praesentium perspiciatis accusamus voluptas modi. Aut iusto quos
-          veritatis eaque a placeat id deleniti minima tenetur iure quasi fuga, ipsum sed eveniet accusantium dolores.
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Nam maiores quia, reiciendis iusto facilis
+          nisi perferendis optio delectus vitae earum necessitatibus
+          <br> <br>
+          Aut iusto quos
+          veritatis eaque a placeat id deleniti minima tenetur iure
+          quasi fuga.
         </p>
         <br>
+        <br>
+
         <p>Technolories I'm working with:</p>
         <div class="tech-list">
           <p>JavaScript</p>
@@ -93,9 +112,123 @@
         </div>
       </div>
       <div class="profile-img">
-        <img src="img/im.jpg" alt="">
+        <img src="img/us.jpg" alt="">
       </div>
     </div>
+  </section>
+
+  <section class="projects" id="3">
+    <h2 class="section-header">Projects</h2>
+    <p class="page-background-num">03</p>
+
+    <div class="project-modul">
+      <button class="modul-close-button">
+        <svg width="24" height="24">
+          <line x1="2" y1="2" x2="22" y2="22" style="stroke-width:4;" />
+          <line x1="2" y1="22" x2="22" y2="2" style="stroke-width:4;" />
+        </svg>
+      </button>
+
+
+      <div class="carousel">
+
+        <div class="inner">
+          <div class="box1 before">
+            <img class="modul-img1" src="" alt="">
+          </div>
+          <div class="box2 active">
+            <img class="modul-img2" src="" alt="">
+          </div>
+          <div class="box3 after">
+            <img class="modul-img3" src="" alt="">
+          </div>
+        </div>
+
+        <div class="carousel-navigation">
+          <button class="prev-button" name="1" value="-1">
+            <svg height="22" width="22">
+              <polyline points="22,1 11,11 22,22 " />
+            </svg>
+          </button>
+          <!--           <svg height="22" width="100">
+            <line x1="1" y1="11" x2="99" y2="11" />
+          </svg> -->
+          <p>0<span class="carousel-num">1</span>/03</p>
+          <button class="next-button" name="1" value="1">
+            <svg height="22" width="22">
+              <polyline points="1,1 11,11 1,22 " />
+            </svg>
+          </button>
+        </div>
+
+      </div>
+
+      <div class="project-modul-info">
+        <!--         <svg height="85" width="85">
+          <polyline points="0,85 0,0 85,0 " />
+        </svg>
+        <svg height="85" width="85">
+          <polyline points="0,85 85,85 85,0 " />
+        </svg> -->
+
+        <div>
+          <h3 id="modul-title">CV FREE MAKER</h3>
+          <div class="tech-used" id="modul-tech">
+          </div>
+        </div>
+
+        <p id="modul-description">Lorem ipsum dolor sit amet consectetur
+          adipisici n gadip isicingadi pisicing elit.
+          Commodi, sunt.
+        </p>
+
+        <div id="demo-git-buttons">
+          <a id="git-link" href="https://github.com/Aleksandar-Jocovic" target="_blank" rel="noopener noreferrer">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <path
+                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+            </svg>
+          </a>
+          <a id="demo-link" href="https://www.linkedin.com/in/aleksandar-jo%C4%8Dovi%C4%87-a402141a8/" target="_blank"
+            rel="noopener noreferrer">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <path
+                d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z" />
+            </svg>
+          </a>
+        </div>
+
+      </div>
+    </div>
+    <!-- end of modul project -->
+
+    <div class="all-projects">
+      <div class="project">
+        <img src="./img/normss.png" alt="">
+        <button class="info-button" name="0">info</button>
+      </div>
+      <div class="project">
+        <img src="./img/projectbase.png" alt="">
+        <button class="info-button" name="1">info</button>
+      </div>
+      <div class="project">
+        <img src="./img/country.png" alt="">
+        <button class="info-button" name="2">info</button>
+      </div>
+      <div class="project">
+        <img src="./img/techshop.png" alt="">
+        <button class="info-button" name="3">info</button>
+      </div>
+      <div class="project">
+        <img src="./img/color.png" alt="">
+        <button class="info-button" name="4">info</button>
+      </div>
+      <div class="project">
+        <img src="./img/quiz.png" alt="">
+        <button class="info-button" name="5">info</button>
+      </div>
+    </div>
+
   </section>
 
   <section class="contact" id="4">
@@ -142,6 +275,7 @@
   </section>
 
 
+  <script src="./slide.js"></script>
 </body>
 
 </html>
