Fake title on project info

--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
       </div>
       <div class="profile-img">
         <img src="img/us.jpg" alt="">
+        <div class="profile-img-border">
+          <svg>
+            <rect></rect>
+          </svg>
+        </div>
       </div>
     </div>
   </section>
@@ -128,10 +133,11 @@
           <line x1="2" y1="22" x2="22" y2="2" style="stroke-width:4;" />
         </svg>
       </button>
-
+      <div class="fake-title">
+        <h3 id="fake-modul-title">CV FREE MAKER</h3>
+      </div>
 
       <div class="carousel">
-
         <div class="inner">
           <div class="box1 before">
             <img class="modul-img1" src="" alt="">
@@ -160,7 +166,6 @@
             </svg>
           </button>
         </div>
-
       </div>
 
       <div class="project-modul-info">
@@ -170,13 +175,11 @@
         <svg height="85" width="85">
           <polyline points="0,85 85,85 85,0 " />
         </svg> -->
-
-        <div>
+        <div class="title-and-tech">
           <h3 id="modul-title">CV FREE MAKER</h3>
           <div class="tech-used" id="modul-tech">
           </div>
         </div>
-
         <p id="modul-description">Lorem ipsum dolor sit amet consectetur
           adipisici n gadip isicingadi pisicing elit.
           Commodi, sunt.
