Project info btn updated and project animations.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
       <div class="line"></div>
       <div class="line"></div>
     </div>
-    <div class="logo">AJ</div>
+    <!-- <div class="logo">AJ</div> -->
+    <div class="theme-switch-wrapper">
+      <label class="theme-switch" for="checkbox">
+        <input type="checkbox" id="checkbox" />
+        <div class="slider round"></div>
+      </label>
+    </div>
 
     <nav class="menu">
       <ul>
@@ -230,7 +236,11 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Norms-app</span></div>
-          <button class="info-button" name="0">info</button>
+          <button class="info-button" name="0">
+            <svg>
+              <rect></rect>
+            </svg>info
+          </button>
         </div>
       </div>
       <div class="enter-up project">
@@ -238,7 +248,11 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Project-base</span></div>
-          <button class="info-button" name="1">info</button>
+          <button class="info-button" name="1">
+            <svg>
+              <rect></rect>
+            </svg>info
+          </button>
         </div>
       </div>
       <div class="enter-up project">
@@ -246,7 +260,11 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Country-info</span></div>
-          <button class="info-button" name="2">info</button>
+          <button class="info-button" name="2">
+            <svg>
+              <rect></rect>
+            </svg>info
+          </button>
         </div>
       </div>
       <div class="enter-up project">
@@ -254,7 +272,11 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Tech-shop</span></div>
-          <button class="info-button" name="3">info</button>
+          <button class="info-button" name="3">
+            <svg>
+              <rect></rect>
+            </svg>info
+          </button>
         </div>
       </div>
       <div class="enter-up project">
@@ -262,15 +284,23 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Random-color</span></div>
-          <button class="info-button" name="4">info</button>
+          <button class="info-button" name="4">
+            <svg>
+              <rect></rect>
+            </svg>info
+          </button>
         </div>
       </div>
       <div class="enter-up project">
         <img src="./img/quiz.png" alt="">
         <div class="project-up">
           <div class="project-up-octagon"></div>
-          <div class="project-title"><span>Continent-quiz</span></div>
-          <button class="info-button" name="5">info</button>
+          <div class="project-title"><span>Portfolio-v.1</span></div>
+          <button class="info-button" name="5">
+            <svg>
+              <rect></rect>
+            </svg>info
+          </button>
         </div>
       </div>
     </div>
@@ -318,9 +348,10 @@
       </div>
 
     </div>
+    <p class="built-by">Built by Aleksandar Jocovic, &copy; 2020</p>
+
   </section>
 
-  <p class="built-by">Built by Aleksandar Jocovic, &copy; 2020</p>
 
   <script src="./slide.js"></script>
 </body>
