--- a/index.html
+++ b/index.html
@@ -137,12 +137,17 @@
         </div>
       </div>
       <div class="profile-img">
-        <img src="img/us.jpg" alt="">
-        <div class="profile-img-border">
+        <!-- <img src="img/us.jpg" alt=""> -->
+        <div class="glitch"></div>
+        <div class="glitch"></div>
+        <div class="glitch"></div>
+        <div class="glitch"></div>
+
+        <!--         <div class="profile-img-border">
           <svg>
             <rect></rect>
           </svg>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -244,11 +249,24 @@
         </div>
       </div>
       <div class="enter-up project">
+        <img src="./img/cvfree.png" alt="">
+        <div class="project-up">
+          <div class="project-up-octagon"></div>
+          <div class="project-title"><span>CV-Free</span></div>
+          <button class="info-button" name="1">
+            <svg>
+              <rect></rect>
+            </svg>info
+          </button>
+        </div>
+      </div>
+
+      <div class="enter-up project">
         <img src="./img/projectbase.png" alt="">
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Project-base</span></div>
-          <button class="info-button" name="1">
+          <button class="info-button" name="2">
             <svg>
               <rect></rect>
             </svg>info
@@ -260,7 +278,7 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Country-info</span></div>
-          <button class="info-button" name="2">
+          <button class="info-button" name="3">
             <svg>
               <rect></rect>
             </svg>info
@@ -272,7 +290,7 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Tech-shop</span></div>
-          <button class="info-button" name="3">
+          <button class="info-button" name="4">
             <svg>
               <rect></rect>
             </svg>info
@@ -284,18 +302,6 @@
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Random-color</span></div>
-          <button class="info-button" name="4">
-            <svg>
-              <rect></rect>
-            </svg>info
-          </button>
-        </div>
-      </div>
-      <div class="enter-up project">
-        <img src="./img/quiz.png" alt="">
-        <div class="project-up">
-          <div class="project-up-octagon"></div>
-          <div class="project-title"><span>Portfolio-v.1</span></div>
           <button class="info-button" name="5">
             <svg>
               <rect></rect>
