New info images.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AAleksandar Jocovic | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Front end developer, intresed in learnig new technologies, improving web development skills, and working on intresting projects.">
+  <title>Aleksandar Jocovic | Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="./img/logo.png">
 </head>
 
 <body>
-
   <div class="menu-button">
     <div class="line"></div>
     <div class="line"></div>
@@ -24,10 +26,18 @@
       </label>
     </div>
     <ul>
-      <li class="enter-down"><a href="#1"><span>01</span>Home</a></li>
-      <li class="enter-down"><a href="#2"><span>02</span>About</a></li>
-      <li class="enter-down"><a href="#3"><span>03</span>Projects</a></li>
-      <li class="enter-down"><a href="#4"><span>04</span>Contact</a></li>
+      <li class="enter-down">
+        <a href="#1"><span>01</span>Home</a>
+      </li>
+      <li class="enter-down">
+        <a href="#2"><span>02</span>About</a>
+      </li>
+      <li class="enter-down">
+        <a href="#3"><span>03</span>Projects</a>
+      </li>
+      <li class="enter-down">
+        <a href="#4"><span>04</span>Contact</a>
+      </li>
       <li class="enter-down">
         <a id="pdf-button" href="./resume.pdf" target="_blank">Resume</a>
       </li>
@@ -37,33 +47,13 @@
   <section class="home sec" id="1">
     <p class="page-background-num">01</p>
 
-
     <!-- <div class="logo">AJ</div> -->
-
-
-    <!--     <nav class="menu">
-      <div class="theme-switch-wrapper">
-        <label class="theme-switch" for="checkbox">
-          <input type="checkbox" id="checkbox" />
-          <div class="slider round"></div>
-        </label>
-      </div>
-      <ul>
-        <li class="enter-down"><a href="#1"><span>01</span>Home</a></li>
-        <li class="enter-down"><a href="#2"><span>02</span>About</a></li>
-        <li class="enter-down"><a href="#3"><span>03</span>Projects</a></li>
-        <li class="enter-down"><a href="#4"><span>04</span>Contact</a></li>
-        <li class="enter-down"><a href="./resume.pdf" target="_blank">Resume</a></li>
-      </ul>
-    </nav> -->
 
     <div class="intro">
       <h1 class="enter-up">Aleksandar Jocovic</h1>
       <h2 class="enter-up">Front end web developer</h2>
       <p class="enter-up">I'm a junior front end developer from Serbia, I build exeptiona websites, applications, and
-        everthing around
-        web.
-      </p>
+        everthing around web.</p>
     </div>
 
     <div class="icons-home">
@@ -102,9 +92,8 @@
 
       <div class="pop-up pop-up-false" id="pop1">
         <p class="pop-text">Skype: <span class="pop-text2">live:jocovic099</span></p>
-        <button class=" copy-btn" name="2">Copy</button>
+        <button class="copy-btn" name="2">Copy</button>
       </div>
-
     </div>
 
     <div class="page-navigation">
@@ -126,7 +115,6 @@
           <polyline points="1,1 12,13 23,1 " />
         </svg>
       </a>
-
     </div>
   </section>
 
@@ -136,16 +124,14 @@
     <h2 class="section-header">About me</h2>
     <div class="enter-up section-content">
       <div class="about-text-and-tech">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Nam maiores quia, reiciendis iusto facilis
-          nisi perferendis optio delectus vitae earum necessitatibus
-          <br> <br>
-          Aut iusto quos
-          veritatis eaque a placeat id deleniti minima tenetur iure
-          quasi fuga.
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam maiores quia, reiciendis iusto facilis nisi
+          perferendis optio delectus vitae earum necessitatibus <br />
+          <br />
+          Aut iusto quos veritatis eaque a placeat id deleniti minima tenetur iure quasi fuga.
         </p>
-        <br>
-        <br>
+        <br />
+        <br />
 
         <p>Technolories I'm working with:</p>
         <div class="tech-list">
@@ -175,8 +161,8 @@
     <div class="project-modul">
       <button class="modul-close-button">
         <svg width="24" height="24">
-          <line x1="2" y1="2" x2="22" y2="22" style="stroke-width:4;" />
-          <line x1="2" y1="22" x2="22" y2="2" style="stroke-width:4;" />
+          <line x1="2" y1="2" x2="22" y2="22" style="stroke-width: 4" />
+          <line x1="2" y1="22" x2="22" y2="2" style="stroke-width: 4" />
         </svg>
       </button>
       <div class="fake-title">
@@ -186,13 +172,13 @@
       <div class="carousel">
         <div class="inner">
           <div class="box1 before">
-            <img class="modul-img1" src="" alt="">
+            <img class="modul-img1" src="" alt="" />
           </div>
           <div class="box2 active">
-            <img class="modul-img2" src="" alt="">
+            <img class="modul-img2" src="" alt="" />
           </div>
           <div class="box3 after">
-            <img class="modul-img3" src="" alt="">
+            <img class="modul-img3" src="" alt="" />
           </div>
         </div>
 
@@ -223,13 +209,10 @@
         </svg> -->
         <div class="title-and-tech">
           <h3 id="modul-title">CV FREE MAKER</h3>
-          <div class="tech-used" id="modul-tech">
-          </div>
+          <div class="tech-used" id="modul-tech"></div>
         </div>
-        <p id="modul-description">Lorem ipsum dolor sit amet consectetur
-          adipisici n gadip isicingadi pisicing elit.
-          Commodi, sunt.
-        </p>
+        <p id="modul-description">Lorem ipsum dolor sit amet consectetur adipisici n gadip isicingadi pisicing elit.
+          Commodi, sunt.</p>
 
         <div id="demo-git-buttons">
           <a id="git-link" href="https://github.com/Aleksandar-Jocovic" target="_blank" rel="noopener noreferrer">
@@ -246,14 +229,13 @@
             </svg>
           </a>
         </div>
-
       </div>
     </div>
     <!-- end of modul project -->
 
     <div class="all-projects">
       <div class="enter-up project">
-        <img src="./img/normss.png" alt="">
+        <img src="./img/normss.png" alt="Norms app screenshot" />
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Norms-app</span></div>
@@ -265,7 +247,7 @@
         </div>
       </div>
       <div class="enter-up project">
-        <img src="./img/cvfree.png" alt="">
+        <img src="./img/cvfree.png" alt="CV-Free app screenshot" />
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>CV-Free</span></div>
@@ -278,7 +260,7 @@
       </div>
 
       <div class="enter-up project">
-        <img src="./img/projectbase.png" alt="">
+        <img src="./img/projectbase.png" alt="Project-base website screenshot" />
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Project-base</span></div>
@@ -290,7 +272,7 @@
         </div>
       </div>
       <div class="enter-up project">
-        <img src="./img/country.png" alt="">
+        <img src="./img/country.png" alt="Country-info app screenshot" />
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Country-info</span></div>
@@ -302,7 +284,7 @@
         </div>
       </div>
       <div class="enter-up project">
-        <img src="./img/techshop.png" alt="">
+        <img src="./img/techshop.png" alt="Tech-shop website screenshot" />
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Tech-shop</span></div>
@@ -314,7 +296,7 @@
         </div>
       </div>
       <div class="enter-up project">
-        <img src="./img/color.png" alt="">
+        <img src="./img/color.png" alt="Random-color app screenshot" />
         <div class="project-up">
           <div class="project-up-octagon"></div>
           <div class="project-title"><span>Random-color</span></div>
@@ -326,7 +308,6 @@
         </div>
       </div>
     </div>
-
   </section>
 
   <section class="contact sec" id="4">
@@ -335,10 +316,7 @@
     <h2 class="section-header">Contact me</h2>
     <div class="section-content">
       <div class="enter-up contact-text-and-info">
-        <p>
-          This is how you can reach me.
-          If you have any questions plese contact me.
-        </p>
+        <p>This is how you can reach me. If you have any questions plese contact me.</p>
         <div>
           <h3>Address:</h3>
           <p>Serbia, Cacak</p>
@@ -366,15 +344,12 @@
           <textarea name="message" class="form-control" placeholder=" " cols="60" rows="10" required></textarea><br />
           <label id="label-message">Your Message</label>
 
-          <input type="submit" value="SEND">
+          <input type="submit" value="SEND" />
         </form>
       </div>
-
     </div>
     <p class="built-by">Built by Aleksandar Jocovic, &copy; 2020</p>
-
   </section>
-
 
   <script src="./slide.js"></script>
 </body>
