--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
     <p class="page-background-num">03</p>
 
     <div class="project-modul">
+      <svg class="corner-svg" height="85" width="85">
+        <polyline points="0,85 0,0 85,0 " />
+      </svg>
+      <svg class="corner-svg" height="85" width="85">
+        <polyline points="0,85 85,85 85,0 " />
+      </svg>
       <button class="modul-close-button">
         <svg width="24" height="24">
           <line x1="2" y1="2" x2="22" y2="22" style="stroke-width: 4" />
@@ -201,13 +207,7 @@
       </div>
 
       <div class="project-modul-info">
-        <!--         <svg height="85" width="85">
-          <polyline points="0,85 0,0 85,0 " />
-        </svg>
-        <svg height="85" width="85">
-          <polyline points="0,85 85,85 85,0 " />
-        </svg> -->
-        <div class="title-and-tech">
+        <div>
           <h3 id="modul-title">CV FREE MAKER</h3>
           <div class="tech-used" id="modul-tech"></div>
         </div>
