--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
     </div>
 
     <div class="icons-home">
-      <a class="enter-down" name="github-link" href="https://github.com/Aleksandar-Jocovic" target="_blank" rel="noopener noreferrer">
+      <a class="enter-down" aria-label="github-link" href="https://github.com/Aleksandar-Jocovic" target="_blank" rel="noopener noreferrer">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path
             d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
         </svg>
       </a>
-      <a class="enter-down" name="linkedin-link" href="www.linkedin.com/in/aleksandar-jočović-a402141a8" target="_blank"
+      <a class="enter-down" aria-label="linkedin-link" href="www.linkedin.com/in/aleksandar-jočović-a402141a8" target="_blank"
         rel="noopener noreferrer">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path
             d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z" />
         </svg>
       </a>
-      <button class="pop-up-btn enter-down" name="gmail-button" value="0">
+      <button class="pop-up-btn enter-down" aria-label="gmail-button" value="0">
         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
           <path
             d="M12 12.713l-11.985-9.713h23.971l-11.986 9.713zm-5.425-1.822l-6.575-5.329v12.501l6.575-7.172zm10.85 0l6.575 7.172v-12.501l-6.575 5.329zm-1.557 1.261l-3.868 3.135-3.868-3.135-8.11 8.848h23.956l-8.11-8.848z" />
@@ -83,7 +83,7 @@
         <button class="copy-btn" name="1">Copy</button>
       </div>
 
-      <button class="pop-up-btn enter-down" name="skype-button" value="1">
+      <button class="pop-up-btn enter-down" aria-label="skype-button" value="1">
         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25">
           <path
             d="M16.283 13.883c0 2.026-1.615 3.354-4.026 3.354-2.121 0-4.252-.965-4.242-2.627.003-.501.376-.961.872-.961 1.249 0 1.237 1.863 3.225 1.863 1.396 0 1.872-.764 1.872-1.296 0-1.924-6.03-.745-6.03-4.362 0-1.958 1.602-3.309 4.12-3.161 2.401.142 3.809 1.202 3.944 2.193.067.647-.361 1.151-1.105 1.151-1.086 0-1.196-1.454-3.067-1.454-.844 0-1.556.352-1.556 1.116 0 1.597 5.993.67 5.993 4.184zm7.717-8.883v14c0 2.761-2.238 5-5 5h-14c-2.761 0-5-2.239-5-5v-14c0-2.761 2.239-5 5-5h14c2.762 0 5 2.239 5 5zm-4.675 8.311c.904-5.177-3.61-9.608-8.702-8.653-3.881-2.374-8.335 2.151-5.956 6.02-.925 5.165 3.589 9.654 8.722 8.673 3.888 2.357 8.329-2.174 5.936-6.04z" />
