Google verification meta tag added to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Aleksandar Jocovic | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="./img/logo.png">
+  <meta name="google-site-verification" content="_F_5tPhnZQ0gxnh9_O1UG_nQ3VNWWJMiIj7u4QlcNSQ" />
 </head>
 
 <body>
@@ -341,7 +342,7 @@
           <label for="input-email" id="label-email">Your Email</label>
           <br />
 
-          <textarea name="message" class="form-control" placeholder=" " cols="60" rows="10" required></textarea><br />
+          <textarea id="message" name="message" class="form-control" placeholder=" " cols="60" rows="10" required></textarea><br />
           <label for="message" id="label-message">Your Message</label>
 
           <input type="submit" value="SEND" />
