--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta title="Aleksandar Jocovic | Portfolio website">
   <meta name="description"
     content="Front end developer, intresed in learnig new technologies, improving web development skills, and working on intresting projects.">
   <title>Aleksandar Jocovic | Portfolio</title>
@@ -104,13 +105,13 @@
         </svg>
       </a>
 
-      <div class="page-num" id="page-num1">00</div>
+      <div class="page-num" id="page-num1" class="enter-down">00</div>
 
-      <svg height="100" width="24">
+      <svg height="100" width="24" class="enter-down">
         <line id="page-nav-line" x1="11" y1="1" x2="11" y2="99" />
       </svg>
 
-      <div class="page-num" id="page-num2">02</div>
+      <div class="page-num" id="page-num2" class="enter-down">02</div>
       <a aria-label="scroll to next page" href="#2" id="page-link2" class="page-nav-link enter-up">
         <svg height="24" width="24">
           <polyline points="1,1 12,13 23,1 " />
@@ -349,7 +350,7 @@
         </form>
       </div>
     </div>
-    <p class="built-by">Built by Aleksandar Jocovic, &copy; 2020</p>
+    <p class="built-by">Built by Aleksandar Jocovic.</p>
   </section>
 
   <script src="./slide.js"></script>
