--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <link rel="icon" href="./img/logo.png">
   <meta name="google-site-verification" content="_F_5tPhnZQ0gxnh9_O1UG_nQ3VNWWJMiIj7u4QlcNSQ" />
 
-  <!-- linkedin start-->
+
   <meta property='og:title' content='Portfolio | Aleksandar Jočović'/>
-  <meta property='og:image' content='//aleksandar-jocovic.netlify.app/portfolio.png'/>
+  <meta property='og:image' content='https://aleksandar-jocovic.netlify.app/portf.jpg'/>
   <meta property='og:description' content='Portfolio website include about me, contact information and interesting projects I been working on.'/>
-  <meta property='og:url' content='//aleksandar-jocovic.netlify.app/'/>
-  <!-- linkedin end-->
+  <meta property='og:url' content='https://aleksandar-jocovic.netlify.app/'/>
+
 
 </head>
 
