About me paragraf and descriptions small changes.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta title="Aleksandar Jocovic | Portfolio website">
   <meta name="description"
     content="Front end developer, intresed in learnig new technologies, improving web development skills, and working on intresting projects.">
-  <title>Aleksandar Jocovic | Portfolio</title>
+  <title>Aleksandar Jočović | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="./img/logo.png">
   <meta name="google-site-verification" content="_F_5tPhnZQ0gxnh9_O1UG_nQ3VNWWJMiIj7u4QlcNSQ" />
@@ -60,10 +60,9 @@
     <!-- <div class="logo">AJ</div> -->
 
     <div class="intro">
-      <h1 class="enter-up">Aleksandar Jocovic</h1>
+      <h1 class="enter-up">Aleksandar Jočović</h1>
       <h2 class="enter-up">Front end web developer</h2>
-      <p class="enter-up">I'm a junior front end developer from Serbia, I build exeptiona websites, applications, and
-        everthing around web.</p>
+      <p class="enter-up">I'm a junior front-end developer from Serbia. I build websites and web applications.</p>
     </div>
 
     <div class="icons-home">
@@ -134,16 +133,14 @@
     <h2 class="section-header">About me</h2>
     <div class="enter-up section-content">
       <div class="about-text-and-tech">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam maiores quia, reiciendis iusto facilis nisi
-          perferendis optio delectus vitae earum necessitatibus <br />
+        <p>I'm interested in expanding my knowledge, learning new technologies, and everything around the web. Technologies I am currently learning are node and typescript.<br />
           <br />
-          Aut iusto quos veritatis eaque a placeat id deleniti minima tenetur iure quasi fuga.
+          I'm looking for an entry-level position as a front-end developer.
         </p>
         <br />
         <br />
 
-        <p>Technolories I'm working with:</p>
+        <p>These are the technologies I use: </p>
         <div class="tech-list">
           <p>JavaScript</p>
           <p>HTML & CSS</p>
@@ -218,11 +215,10 @@
 
       <div class="project-modul-info">
         <div>
-          <h3 id="modul-title">CV FREE MAKER</h3>
+          <h3 id="modul-title"></h3>
           <div class="tech-used" id="modul-tech"></div>
         </div>
-        <p id="modul-description">Lorem ipsum dolor sit amet consectetur adipisici n gadip isicingadi pisicing elit.
-          Commodi, sunt.</p>
+        <p id="modul-description"></p>
 
         <div id="demo-git-buttons">
           <a id="git-link" href="https://github.com/Aleksandar-Jocovic" target="_blank" rel="noopener noreferrer">
@@ -326,14 +322,14 @@
     <h2 class="section-header">Contact me</h2>
     <div class="section-content">
       <div class="enter-up contact-text-and-info">
-        <p>This is how you can reach me. If you have any questions plese contact me.</p>
+        <p>This is how you can reach me. If you have any questions please contact me.</p>
         <div>
           <h3>Address:</h3>
-          <p>Serbia, Cacak</p>
+          <p>Serbia, Čačak</p>
         </div>
         <div>
           <h3>Phone:</h3>
-          <p>+38164 433 34 34</p>
+          <p>+38162 192 07 74</p>
         </div>
         <div>
           <h3>E-mail:</h3>
@@ -342,7 +338,7 @@
       </div>
 
       <div class="enter-up contact-form">
-        <h2>Or send a mesage</h2>
+        <h2>Or send a mesage.</h2>
         <form id="contact-form" netlify>
           <input id="input-name" name="name" type="text" class="form-control" placeholder=" " required />
           <label for="input-name" id="label-name">Your Name</label>
@@ -358,10 +354,10 @@
         </form>
       </div>
     </div>
-    <p class="built-by">Built by Aleksandar Jocovic.</p>
+    <p class="built-by">Built by Aleksandar Jočović.</p>
   </section>
 
-  <script src="./slide.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
