--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <h2 class="section-header">About me</h2>
     <div class="enter-up section-content">
       <div class="about-text-and-tech">
-        <p>I'm very exited to learn new technologies and everything around the web. Highly motivated to improve my knowledge and experience. Technologies I am currently learning are node and typescript.<br />
+        <p>I'm very excited to learn new technologies and everything around the web. Highly motivated to improve my knowledge and experience. Technologies I am currently learning are node and typescript.<br />
           <br />
           I'm looking for an entry-level position as a front-end developer.
         </p>
